--- a/interface/i18n/mist.es.i18n.json
+++ b/interface/i18n/mist.es.i18n.json
@@ -2,15 +2,15 @@
     "mist": {
         "applicationMenu": {
             "app": {
-                "label": "__app__",
-                "about": "Sobre __app__",
+                "label": "Ellagem",
+                "about": "Sobre Ellagem",
                 "checkForUpdates": "Buscar actualización...",
                 "checkForNodeUpdates": "Check for Ethereum node updates...",
                 "services": "Servicios",
-                "hide": "Ocultar __app__",
+                "hide": "Ocultar Ellagem",
                 "hideOthers": "Ocultar otros",
                 "showAll": "Mostrar todo",
-                "quit": "Dejar __app__"
+                "quit": "Dejar Ellagem"
             },
             "edit": {
                 "label": "Editar",
