--- a/interface/i18n/mist.fa.i18n.json
+++ b/interface/i18n/mist.fa.i18n.json
@@ -2,15 +2,15 @@
     "mist": {
         "applicationMenu": {
             "app": {
-                "label": "__app__",
-                "about": "About __app__",
+                "label": "Ellagem",
+                "about": "About Ellagem",
                 "checkForUpdates": "Check for updates...",
                 "checkForNodeUpdates": "Check for Ethereum node updates...",
                 "services": "Services",
-                "hide": "Hide __app__",
+                "hide": "Hide Ellagem",
                 "hideOthers": "Hide Others",
                 "showAll": "Show All",
-                "quit": "Quit __app__"
+                "quit": "Quit Ellagem"
             },
             "edit": {
                 "label": "Edit",
