--- a/interface/i18n/mist.ko.i18n.json
+++ b/interface/i18n/mist.ko.i18n.json
@@ -2,15 +2,15 @@
     "mist": {
         "applicationMenu": {
             "app": {
-                "label": "__app__",
-                "about": "__app__에 대하여",
+                "label": "Ellagem",
+                "about": "Ellagem에 대하여",
                 "checkForUpdates": "업데이트 확인...",
                 "checkForNodeUpdates": "이더리움 노드 업데이트 확인...",
                 "services": "서비스",
-                "hide": "__app__ 숨기기",
+                "hide": "Ellagem 숨기기",
                 "hideOthers": "다른 창 숨기기",
                 "showAll": "모두 보기",
-                "quit": "__app__ 종료"
+                "quit": "Ellagem 종료"
             },
             "edit": {
                 "label": "수정",
