--- a/interface/i18n/mist.nb.i18n.json
+++ b/interface/i18n/mist.nb.i18n.json
@@ -2,15 +2,15 @@
     "mist": {
         "applicationMenu": {
             "app": {
-                "label": "__app__",
-                "about": "Om __app__",
+                "label": "Ellagem",
+                "about": "Om Ellagem",
                 "checkForUpdates": "Se etter oppdateringer...",
                 "checkForNodeUpdates": "Check for Ethereum node updates...",
                 "services": "Tjenester",
-                "hide": "Skjul __app__",
+                "hide": "Skjul Ellagem",
                 "hideOthers": "Skjul Andre",
                 "showAll": "Vis Alle",
-                "quit": "Avslutt __app__"
+                "quit": "Avslutt Ellagem"
             },
             "edit": {
                 "label": "Endre",
