--- a/interface/i18n/mist.en.i18n.json
+++ b/interface/i18n/mist.en.i18n.json
@@ -95,6 +95,7 @@
                 "twitter": "Tweet Us",
                 "pools": "Mining Pools ⛏",
                 "marketinfo": "Market Info",
+                "whattomine": "Mining Profit",
                 "coinprice": "Coin Price"
             },
             "exchanges": {
